--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/InGame/InGameSettings.storyboard
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/InGame/InGameSettings.storyboard
@@ -25,17 +25,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Controllers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eS5-Gd-2Ef">
-                                                    <rect key="frame" x="20" y="0.0" width="323" height="43.5"/>
+                                                    <rect key="frame" x="20" y="11.5" width="323" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="eS5-Gd-2Ef" firstAttribute="top" secondItem="xnE-PQ-8cE" secondAttribute="top" id="3d8-b6-tGC"/>
-                                                <constraint firstAttribute="bottom" secondItem="eS5-Gd-2Ef" secondAttribute="bottom" id="bLg-s9-e2W"/>
                                                 <constraint firstAttribute="trailing" secondItem="eS5-Gd-2Ef" secondAttribute="trailing" id="qAx-s2-Vol"/>
                                                 <constraint firstItem="eS5-Gd-2Ef" firstAttribute="leading" secondItem="xnE-PQ-8cE" secondAttribute="leadingMargin" id="vhF-g8-8Yc"/>
+                                                <constraint firstItem="eS5-Gd-2Ef" firstAttribute="centerY" secondItem="xnE-PQ-8cE" secondAttribute="centerY" id="xSx-3m-3N5"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -50,7 +49,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Touchscreen Controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o8N-ql-HBA">
-                                                    <rect key="frame" x="20" y="0.0" width="323" height="43.5"/>
+                                                    <rect key="frame" x="20" y="11.5" width="323" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -58,13 +57,64 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="o8N-ql-HBA" firstAttribute="leading" secondItem="bp0-oh-SQo" secondAttribute="leadingMargin" id="1Hl-9B-oX6"/>
-                                                <constraint firstItem="o8N-ql-HBA" firstAttribute="top" secondItem="bp0-oh-SQo" secondAttribute="top" id="Wm5-YE-qmi"/>
-                                                <constraint firstAttribute="bottom" secondItem="o8N-ql-HBA" secondAttribute="bottom" id="iyy-Uv-0Fx"/>
+                                                <constraint firstItem="o8N-ql-HBA" firstAttribute="centerY" secondItem="bp0-oh-SQo" secondAttribute="centerY" id="KXv-Mb-i6M"/>
                                                 <constraint firstAttribute="trailing" secondItem="o8N-ql-HBA" secondAttribute="trailing" id="kQ2-8O-sjz"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="rSZ-0M-uTE" kind="show" id="EMG-Wm-GUU"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Save State" id="OsQ-TK-bBV">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="43.666667938232422" id="4Bc-QM-En1">
+                                        <rect key="frame" x="20" y="198.83333587646484" width="374" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4Bc-QM-En1" id="8cx-mp-H3T">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Load" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kj5-6t-VLU">
+                                                    <rect key="frame" x="20" y="11.5" width="323" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Kj5-6t-VLU" firstAttribute="leading" secondItem="8cx-mp-H3T" secondAttribute="leadingMargin" id="Xq8-MX-jue"/>
+                                                <constraint firstItem="Kj5-6t-VLU" firstAttribute="centerY" secondItem="8cx-mp-H3T" secondAttribute="centerY" id="aYE-66-9z4"/>
+                                                <constraint firstAttribute="trailing" secondItem="Kj5-6t-VLU" secondAttribute="trailing" id="rtb-2W-jOr"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="XHb-tg-0Di" kind="show" id="6Ei-0x-qgJ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="43.666667938232422" id="Z0q-zI-Tbq">
+                                        <rect key="frame" x="20" y="242.50000381469727" width="374" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z0q-zI-Tbq" id="ZHn-Au-ueC">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Save" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1u-Lf-ImR">
+                                                    <rect key="frame" x="20" y="11.5" width="323" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="K1u-Lf-ImR" firstAttribute="centerY" secondItem="ZHn-Au-ueC" secondAttribute="centerY" id="3bo-rL-ZVH"/>
+                                                <constraint firstItem="K1u-Lf-ImR" firstAttribute="leading" secondItem="ZHn-Au-ueC" secondAttribute="leadingMargin" id="NoN-9x-7Dc"/>
+                                                <constraint firstAttribute="trailing" secondItem="K1u-Lf-ImR" secondAttribute="trailing" id="lbi-ef-K6P"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="gjN-t9-9DX" kind="show" id="PLB-JJ-0vI"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -132,6 +182,50 @@
             </objects>
             <point key="canvasLocation" x="12535" y="-64"/>
         </scene>
+        <!--Load State-->
+        <scene sceneID="MXg-jP-9G6">
+            <objects>
+                <tableViewController id="XHb-tg-0Di" userLabel="Load State" customClass="LoadStateViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="iJf-3C-yD9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="state_cell" rowHeight="44" id="GdQ-RR-o0J" customClass="StateCell">
+                                <rect key="frame" x="20" y="55.5" width="374" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GdQ-RR-o0J" id="V4Y-A0-IEP">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="State Slot 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVG-PZ-CTl">
+                                            <rect key="frame" x="20" y="12" width="354" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="uVG-PZ-CTl" firstAttribute="leading" secondItem="V4Y-A0-IEP" secondAttribute="leadingMargin" id="XhG-Uy-WNW"/>
+                                        <constraint firstItem="uVG-PZ-CTl" firstAttribute="centerY" secondItem="V4Y-A0-IEP" secondAttribute="centerY" id="cv9-Qm-Q9I"/>
+                                        <constraint firstAttribute="trailing" secondItem="uVG-PZ-CTl" secondAttribute="trailing" id="dQS-fc-Cbg"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="m_slot_label" destination="uVG-PZ-CTl" id="l5L-Aj-UiP"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="XHb-tg-0Di" id="SfE-Em-P2x"/>
+                            <outlet property="delegate" destination="XHb-tg-0Di" id="4TY-Ms-7Gb"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Load" id="elK-Yl-abI"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vu6-Pp-izb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="12535" y="649"/>
+        </scene>
         <!--Root-->
         <scene sceneID="hwl-qI-htO">
             <objects>
@@ -157,6 +251,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zCk-m4-lAN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="10664" y="-64"/>
+        </scene>
+        <!--Save State-->
+        <scene sceneID="ogJ-Eb-gBy">
+            <objects>
+                <tableViewController id="gjN-t9-9DX" userLabel="Save State" customClass="SaveStateViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="OC0-k5-f0Z">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="state_cell" rowHeight="44" id="l6U-QK-2On" customClass="StateCell">
+                                <rect key="frame" x="20" y="55.5" width="374" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="l6U-QK-2On" id="0of-1u-GAD">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="State Slot 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lY7-Nq-L4G">
+                                            <rect key="frame" x="20" y="12" width="354" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="lY7-Nq-L4G" secondAttribute="trailing" id="W0H-AD-p6k"/>
+                                        <constraint firstItem="lY7-Nq-L4G" firstAttribute="centerY" secondItem="0of-1u-GAD" secondAttribute="centerY" id="czW-IH-Lht"/>
+                                        <constraint firstItem="lY7-Nq-L4G" firstAttribute="leading" secondItem="0of-1u-GAD" secondAttribute="leadingMargin" id="lwF-VV-0g2"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="m_slot_label" destination="lY7-Nq-L4G" id="UtM-9g-7ag"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="gjN-t9-9DX" id="tSq-Uc-SHd"/>
+                            <outlet property="delegate" destination="gjN-t9-9DX" id="0nX-96-C6r"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Save" id="dYF-hp-EOu"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yff-o4-p1h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="13458" y="649"/>
         </scene>
     </scenes>
 </document>
